Comentando classes s3.